# chatbotai

./: .gitignore  chatbot.py  config.json  convert.ts  log.md  main.py  normalize.py  old.py  old.zsh  pyproject.toml  pyvenv.cfg  requirements.txt  soundwithpy.py
